--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>EM BUSCA DA CIDADE PERDIDA</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="style.css">
+    <title>EM BUSCA DA CIDADE PERDIDA</title>
 </head>
 <body>
-    
+   <main>
+    <div class="passo" id="passo-0">
+        <p>Há uma cidade perdida e para encntra-la, decidi seguir algumas pistas</p>
+        <button class="btn-proximo" data-proximo="1">Rio de Janeiro</button>
+        <button class="btn-proximo" data-proximo="2">Pernambuco</button>
+    </div>
+    <div class="passo" id="passo-1">
+        <p>Você começa sua jornada no pico da tijuca para encontrar a primeira pista</p>
+        <button class="btn-proximo" data-proximo="3">Procurar a pista no topo do pico</button>
+        <button class="btn-proximo" data-proximo="4">desistir e voltar para casa</button>
+    </div>
+</main>
 </body>
 </html>
